# rnnoise-nu

./: CMakeLists.txt
examples/: rnnoise_demo.c
include/: rnnoise-nu.h
src/: celt_lpc.c  denoise.c  pitch.c  rnn.h
